# iroha-java

./: .gitignore  .travis.yml  1  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  build.gradle  gradle.properties  settings.gradle
.github/: dependabot.yml
.github/workflows/: ci.yml  iroha2-allure.yml  iroha2-ci.yml  iroha2-java-pr.yml  iroha2-java.yml  iroha2-pr.yml  iroha2.yml  publish.yml
allure-report/: app.js  index.html
allure-report/export/: influxDbData.txt
client/: PITCHME.md  README.md  build.gradle  proto.gradle
client/src/main/proto/: block.proto  primitive.proto  queries.proto
codegen/: build.gradle  gradle.properties
codegen-engine/: build.gradle
codegen/src/main/resources/: schema.json
datamodel-generated/: build.gradle
docker-compose/: config.json  docker-compose.yaml  env.txt  g.json  logs.txt  tx.json
examples/tutorial/: build.gradle.kts
gradle/wrapper/: .gitignore  gradle-wrapper.properties
housekeeping/: sonar.sh
java-interop/: build.gradle
java-interop/src/main/java/: EntryPoint.java
modules/admin/: build.gradle
modules/admin-client/: README.md  build.gradle
modules/admin-client/src/test/resources/: logback-test.xml
modules/block/: README.md  build.gradle
modules/block/src/test/resources/: executor.wasm  validator.wasm
modules/client/: README.md  build.gradle
modules/client/src/test/create_nft_for_alice_smartcontract/: Cargo.toml
modules/client/src/test/executor/: Cargo.toml  build.sh
modules/client/src/test/validator/: Cargo.toml  build.sh
modules/client/src/test/validator/src/: lib.rs
modules/codegen/: README.md  build.gradle
modules/common/: build.gradle
modules/genesis/: build.gradle
modules/model/: README.md  build.gradle
modules/test-tools/: README.md  build.gradle
modules/testcontainers/: README.md  build.gradle
sample-app/: README.md  build.gradle.kts  gradle.properties
sample-app/docker/: docker-compose.yaml
sample-app/docker/config/: config.json
scripts/: setup_docker_test_env.sh
test-smart-contract/: Cargo.toml  Dockerfile  README.md  build.sh
test-smart-contract/src/: lib.rs
testcontainers/: PITCHME.md  PITCHME.yaml  README.md  build.gradle
testcontainers/docker/: Dockerfile  README.md  build_and_push.sh  run-iroha.sh
testcontainers/src/test/resources/: server.crt  server.key
(+758 files in other folders)
