[package]
name = "iroha_java_executor"
edition = "2021"
version = "2.0.0-pre-rc.19"
# TODO: teams are being deprecated update the authors URL
authors = ["Iroha 2 team <https://github.com/orgs/soramitsu/teams/iroha2>"]

[profile.dev]
panic = "abort"

[profile.release]
strip = "debuginfo" # Remove debugging info from the binary
panic = "abort"     # Panics are transcribed to Traps when compiling for wasm anyways
lto = true          # Link-time-optimization produces notable decrease in binary size
opt-level = "z"     # Optimize for size vs speed with "s"/"z"(removes vectorization)
codegen-units = 1   # Further reduces binary size but increases compilation time

[lib]
crate-type = ['cdylib']

[dependencies]
iroha_executor = { git = "https://github.com/hyperledger/iroha/", rev = "562d33aff8c6fd4c68c3b1ccdbe934c6ad860a12", features = ["debug"] }

lol_alloc = "0.4.0"
panic-halt = "0.2.0"

