[package]
name = "iroha_java_validator"
edition = "2021"
version = "2.0.0-pre-rc.19"
# TODO: teams are being deprecated update the authors URL
authors = ["Iroha 2 team <https://github.com/orgs/soramitsu/teams/iroha2>"]

[profile.dev]
panic = "abort"

[profile.release]
strip = "debuginfo" # Remove debugging info from the binary
panic = "abort"     # Panics are transcribed to Traps when compiling for wasm anyways
lto = true          # Link-time-optimization produces notable decrease in binary size
opt-level = "z"     # Optimize for size vs speed with "s"/"z"(removes vectorization)
codegen-units = 1   # Further reduces binary size but increases compilation time

[lib]
crate-type = ['cdylib']

[dependencies]
iroha_validator = { git = "https://github.com/hyperledger/iroha/", branch = "iroha2-stable", features = ["default-validator"] }
iroha_wasm = { git = "https://github.com/hyperledger/iroha/", branch = "iroha2-stable", features = ["debug"] }
iroha_schema = { git = "https://github.com/hyperledger/iroha/", branch = "iroha2-stable" }

parity-scale-codec = { version = "3.2.1", default-features = false }
serde_json = { version = "1.0.91", default-features = false }
serde = { version = "1.0.151", default-features = false }
panic-halt = "0.2.0"

